k3s-playground/ingress/myingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: radu-test.vpn
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx-service
          servicePort: 8182
  - host: radu-test.vpn
    http:
      paths:
      - path: /nginx2
        backend:
          serviceName: nginx-service2
          servicePort: 8183
  - host: radu-test.vpn
    http:
      paths:
      - path: /nginx3
        backend:
          serviceName: nginx3-service
          servicePort: 80
  - host: radu-test.vpn
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-service
          servicePort: 80
  - host: radu-test.vpn
    http:
      paths:
      - path: /modules
        backend:
          serviceName: modules-service
          servicePort: 80
